--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,28 @@
-main {
-  
-
+.travel-direction {
+    font-size: 120%;
+    color: white;
 }
 
 h1 {
     text-align: center;
     color: white;
+}
+
+.travel-info {
+    font-size: 80%;
+}
+
+.stop-description  {
+    font-weight: bold;
+    color: white;
+}
+
+button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    /* padding: 15px 32px; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
