fix search callback issue with async

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
     </div>
   
     <div>
-      <input type='text' [(ngModel)]="busId"><button (click)="searchRoute()">Search</button>
+      <input type='text' [(ngModel)]="busId" value="Q19"><button (click)="searchRoute()">Search</button>
     </div>
      
 
