--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,21 +3,63 @@
     color: white;
 }
 
+#full-name {
+    font-size: 120%;
+    font-weight: bolder;
+}
+
 .travel-info {
     font-size: 80%;
+    font-weight: bold;
 }
+
+
 
 .stop-description  {
     font-weight: bold;
     color: white;
 }
 
+input {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    color: #CACACA;
+    font-size: 120%;
+    border-bottom: 1px solid white;
+  }
+
 button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    /* padding: 15px 32px; */
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+	background: transparent;
+	border: none;
+	margin: 30px auto 0;
+	/* display: block; */
+    font-size: 20px;
+    color: #CACACA;
+	outline: none;
+	position: relative;
+	transition: 0.3s;
+}
+
+button:before {
+	content: '';
+	border-bottom: 1px solid rgb(252, 252, 252);
+	position: absolute;
+	bottom: 0; 
+	left: 0;
+	right: 0; 
+	margin: 0 auto;
+	width: 0;
+	transition: 0.3s;
+}
+
+button:hover:before {
+    width: 100%;
+    padding: 0;
+}
+
+button:active {
+	/* background: white; */
+	color: black;
+	transition: none;
 }
