--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,6 +3,10 @@
     color: white;
 }
 
+/* .travel-info:hover {
+    color: white;
+} */
+
 #full-name {
     font-size: 120%;
     font-weight: bolder;
@@ -12,8 +16,6 @@
     font-size: 80%;
     font-weight: bold;
 }
-
-
 
 .stop-description  {
     font-weight: bold;
