--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -20,7 +20,7 @@
       <div class="travel-info">
         <div *ngIf="expandFrom && i == 0">
           <div *ngFor="let stop of fromStops">
-            <p><i class="fa fa-arrow-right" aria-hidden="true"></i> &nbsp; {{stop.name}} &nbsp;
+            <p (click)="sendNotify(stop)"><i class="fa fa-arrow-right" aria-hidden="true"></i> &nbsp; {{stop.name}} &nbsp;
               <span [ngStyle]="{'color':'white', 'font-weight':'bold'}" *ngIf="busDictionary[stop.id] !== undefined">
                 <i class="fa fa-bus" aria-hidden="true"></i>
                 {{busDictionary[stop.id]['stopDesc']}}
