add stop information, continue working on twillo

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -20,7 +20,7 @@
       <div class="travel-info">
         <div *ngIf="expandFrom && i == 0">
           <div *ngFor="let stop of fromStops">
-            <p (click)="sendNotify(stop)"><i class="fa fa-arrow-right" aria-hidden="true"></i> &nbsp; {{stop.name}} &nbsp;
+            <p routerLink='stop/{{stop.id}}'><i class="fa fa-arrow-right" aria-hidden="true"></i> &nbsp; {{stop.name}} &nbsp;
               <span [ngStyle]="{'color':'white', 'font-weight':'bold'}" *ngIf="busDictionary[stop.id] !== undefined">
                 <i class="fa fa-bus" aria-hidden="true"></i>
                 {{busDictionary[stop.id]['stopDesc']}}
@@ -45,6 +45,8 @@
       <button (click)='refresh()'>Refresh</button>
 
     </div>
+
+  
 
   </div>
 
