--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,38 @@ h1 {
     color: #999999;
     font-family: 'Monoton', cursive;
 }
+
+button {
+	background: transparent;
+	border: none;
+	margin: 30px auto 0;
+	/* display: block; */
+    font-size: 20px;
+    color: #CACACA;
+	outline: none;
+	position: relative;
+	transition: 0.3s;
+}
+
+button:before {
+	content: '';
+	border-bottom: 1px solid rgb(252, 252, 252);
+	position: absolute;
+	bottom: 0; 
+	left: 0;
+	right: 0; 
+	margin: 0 auto;
+	width: 0;
+	transition: 0.3s;
+}
+
+button:hover:before {
+    width: 100%;
+    padding: 0;
+}
+
+button:active {
+	/* background: white; */
+	color: black;
+	transition: none;
+}
