--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,6 @@
 <main>
   <div>
     <h1>Dark Transit</h1>
-    <!-- <img src="../../assets/logo.png" alt="Dark Transit"> -->
   </div>
 
   <div>
@@ -46,8 +45,14 @@
 
     </div>
 
-  
+  </div>
 
+
+  <div id="favorites">
+      <h2>Favorites</h2>
+      <div *ngFor="let item of favoriteStops | mapToArray">           
+          <p routerLink='stop/{{item.key}}'>{{item.value}}</p>
+      </div>
   </div>
 
 </main>
